--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -82,9 +82,11 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
-.section {
-  padding-top: 94px;
+.pb {
   padding-bottom: 94px;
+}
+.pt {
+  padding-top: 94px;
 }
 a {
   text-decoration: none;
