--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -8,11 +8,16 @@
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-}
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transform: translateY(-100vh);
-  transition: transform 700ms ease-out;
+
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transform: translateY(-100vh);
+    transition: transform 700ms ease-out;
+  }
+  &.is-hidden .modal {
+    transform: translateY(-100vh);
+    transition: transform 700ms ease-out;
+  }
 }
