--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -11,15 +11,7 @@
 .footer-form__email-label {
   margin-right: 10px;
   .footer-form__modal-input {
-    width: 358px;
-    height: 50px;
-    padding: 15px 16px;
-    box-sizing: border-box;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    background: $background-black-dark;
-    color: $primary-white-color;
+    @extend %footer-form__modal-input;
 
     &:hover,
     &:focus {
@@ -30,10 +22,6 @@
 }
 
 .footer-form__btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 50px;
-  padding: 20px 20px;
+  @include footer-form__btn(center, center);
+  @extend %footer-form__btn;
 }
