--- a/sass/components/_portfolio-filters.scss
+++ b/sass/components/_portfolio-filters.scss
@@ -1,21 +1,8 @@
 .filters-list {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 50px;
+  @include filters-list(center, 20px, 50px);
 }
 .filter__buttons {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  color: $primary-black-color;
-  background-color: $background-light;
-  cursor: pointer;
-  padding: 6px 22px;
-  border-radius: 4px;
-  border: none;
-
+  @extend %filter__buttons;
   &:hover,
   &:focus,
   &:active {
