--- a/sass/components/_portfolio-items.scss
+++ b/sass/components/_portfolio-items.scss
@@ -1,14 +1,11 @@
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+  @include portfolio-list(wrap, 30px);
 }
 .portfolio-list__item {
   flex-basis: calc((100% - 90px) / 3);
 
   &:hover {
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    @include box-shadow($horiz: 0px, $vert: 1px, $blur: 3px);
     border: 1px solid #eeeeee;
   }
 }
@@ -20,37 +17,14 @@
   transform: translateX(0);
 }
 .portfolio-list__effect {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 63px 24px;
-  background: rgba(33, 150, 243, 0.9);
-
-  transform: translatey(100%);
-  transition: transform 250ms ease;
+  @extend %portfolio-list__effect;
 }
 .portfolio-list__text {
-  font-size: 16px;
-  line-height: 1.5;
-  color: $primary-white-color;
+  @extend %portfolio-list__text;
 }
 .portfolio-title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  color: $primary-black-color;
-  padding: 15px;
-  margin-bottom: 4px;
+  @extend %portfolio-title;
 }
 .portfolio-text {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.8;
-  color: $primary-text-color;
-  padding: 15px;
+  @extend %portfolio-text;
 }
