--- a/sass/layout/__footer.scss
+++ b/sass/layout/__footer.scss
@@ -10,19 +10,10 @@
   margin-bottom: 20px;
 }
 .address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color: $primary-white-color;
-  margin-bottom: 5px;
+  @extend %address;
 }
 .contact__footer {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color: $gray-2;
-  margin-bottom: 5px;
+  @extend %contact__footer;
 
   &:hover,
   &:focus {
@@ -30,17 +21,10 @@
   }
 }
 .footer-flexbox {
-  display: flex;
-  gap: 50px;
+  @include footer-flexbox(30px);
 }
 .footer-title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 31px;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
+  @extend %footer-title;
 }
 .footer-list-item {
   display: flex;
