--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,19 +1,11 @@
 .clients-list {
-  display: flex;
-  justify-content: space-between;
+  @include clients-list(space-between);
 }
 .clients-list__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: solid 1px $gray-2;
-  border-radius: 5px;
-  width: 170px;
-  height: 92px;
-  cursor: pointer;
+  @include clients-list__item(center, center);
+  @extend %clients-list__item;
 
   &:hover {
     border-color: $accent-color;
   }
 }
-
