--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -116,6 +116,8 @@
   line-height: 1.71;
   color: $primary-white-color;
   margin-bottom: 5px;
+  width: 231px;
+  display: inline-block;
 }
 %contact__footer {
   font-style: normal;
